--- a/kawn_subscriptions_manager/templates/clients/sales/list_outlet_client.html
+++ b/kawn_subscriptions_manager/templates/clients/sales/list_outlet_client.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card-body px-0 pt-0 pb-2">
+            <div class="card-body">
                 <!-- <div class="row">
                     <div class="col">
                         <form action="" method="get" class="mx-3 form-inline justify-content-center">
@@ -52,7 +52,7 @@
                     </div>
                 </div> -->
                 <div class="table-responsive p-0">
-                    <table class="table table-sm sortable align-items-center mb-0">
+                    <table class="table table-sm" id="table1">
                         <thead>
                             <tr>
                                 <th class="text-uppercase text-xs text-dark font-weight-bolder">Outlet Name</th>
@@ -101,14 +101,6 @@
                         </tbody>
                     </table>
                 </div>
-            </div>
-            <div class="card-footer row">
-                <hr>
-                <span class="col-lg-6">{% bootstrap_paginate page_obj show_first_last="true" centered="true" range=1 %}</span>
-                <span class="col-lg-6 text-end text-sm">
-                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-                </span>
-                <hr>
             </div>
         </div>
     </div>
