--- a/kawn_subscriptions_manager/templates/dashboard/dashboard_logs_created.html
+++ b/kawn_subscriptions_manager/templates/dashboard/dashboard_logs_created.html
@@ -105,6 +105,68 @@
         </div>
     </div>
 </div>
+{% if request.user.type == "ADMIN" or request.user.type == "SUPERVISOR" %}
+<div class="row my-4">
+    <div class="col-lg-6 col-md-12">
+        <div class="card h-100">
+            <div class="card-header pb-0">
+                <h6 class="font-weight-bolder">Subscriptions Logs
+                    <span class="badge badge-sm bg-gradient-success">Created</span>
+                </h6>
+                <div class="row d-inline">
+                    <a href="/" class="btn btn-sm bg-gradient-success col-4 mt-2 mb-1">Created</a>
+                    <a href="{{ 'home2' }}" class="btn btn-sm bg-gradient-warning col-4 mt-2 mb-1">Modified</a>
+                </div>
+                <!-- <p class="text-sm">
+                    <i class="fa fa-arrow-up text-success" aria-hidden="true"></i>
+                    <span class="font-weight-bold">24%</span> this month
+                </p> -->
+            </div>
+            <div class="card-body p-3">
+                {% for data in object_list|slice:":4" %}
+                <div class="timeline timeline-one-side">
+                    {% if data.created %}
+                    <div class="timeline-block mb-3">
+                        <span class="timeline-step">
+                            <i class="ni ni-app text-dark text-gradient"></i>
+                        </span>
+                        <div class="timeline-content">
+                            <h6 class="text-dark text-sm font-weight-bold mb-0">Subscriptions has been
+                                <span class="badge badge-sm bg-gradient-success">created</span>
+                                by <b>{{ data.created_by.name }} ({{ data.created_by.type }})</b>
+                            </h6>
+                            <li>
+                                <label for="text-dark text-sm font-weight-bold">Outlet Name</label>
+                                <ul>
+                                    <p class="text-secondary font-weight-bold text-xs">{{ data.outlet.name }}</p>
+                                </ul>
+                            </li>
+                            <li>
+                                <label for="text-dark text-sm font-weight-bold">Subscriptions Plan</label>
+                                <ul>
+                                    <p class="text-secondary font-weight-bold text-xs">{{ data.subscriptionplan.name }}
+                                    </p>
+                                </ul>
+                            </li>
+                            <p class="text-uppercase text-secondary font-weight-bold text-xs mt-1 mb-0">
+                                {{ data.created|date:"d M Y | H.i e" }}
+                            </p>
+                        </div>
+                    </div>
+                    {% endif %}
+                </div>
+                {% endfor %}
+                <div class="text-center mt-4">
+                    <a href="{% url 'subscriptions:subscription_logs'  %}" class="btn btn-outline-dark col-12">
+                        View All
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endif %}
+
 {% endblock content %}
 
 {% block inline_javascript %}
