Update static files

--- a/kawn_subscriptions_manager/static/css/project.css
+++ b/kawn_subscriptions_manager/static/css/project.css
@@ -15,3 +15,12 @@
 th:hover {
   cursor: pointer;
 }
+
+td {
+  white-space: normal !important; 
+  word-wrap: break-word;  
+}
+
+table {
+  table-layout: auto;
+}
