--- a/kawn_subscriptions_manager/static/extensions/datatables.net-bs5/css/dataTables.bootstrap5.css
+++ b/kawn_subscriptions_manager/static/extensions/datatables.net-bs5/css/dataTables.bootstrap5.css
@@ -312,6 +312,7 @@ div.dataTables_wrapper div.dataTables_filter input {
 }
 div.dataTables_wrapper div.dataTables_info {
   padding-top: 0.85em;
+  font-size: small;
 }
 div.dataTables_wrapper div.dataTables_paginate {
   margin: 0;
